--- a/2017-12-4/workshop_06.ipynb
+++ b/2017-12-4/workshop_06.ipynb
@@ -1502,7 +1502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -1570,9 +1570,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 108,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pyplasm.xgepy.Hpc; proxy of <Swig Object of type 'std::shared_ptr< Hpc > *' at 0x000000000E77C270> >"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "VIEW(STRUCT([basement,T(3)(hbasament),fullExtWall,medWallArcs,crossWalls,\n",
     "             fullTetto,crossCourtWall,theMedColumns,fullTopCourtWall,fullCourTetto,\n",
