--- a/2017-10-23/workshop_1.ipynb
+++ b/2017-10-23/workshop_1.ipynb
@@ -33,7 +33,7 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "(plasm \"\n",
+    "# (plasm \"\n",
     "    LOAD:\u0001\n",
     "    script1.psm\u0001 ;\n",
     "    DEF fun1 (a::Isreal) = (SIN * COS):a ;\n",
