--- a/2017-11-20/workshop_05.ipynb
+++ b/2017-11-20/workshop_05.ipynb
@@ -92,11 +92,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Evaluating fenvs.py..\n",
+      "...fenvs.py imported in 0.20908376148 seconds\n"
+     ]
+    }
+   ],
    "source": [
     "### Importazione delle libreria larlib, math e csv\n",
     "from larlib import *\n",
@@ -132,27 +139,7 @@
     "            i = i+1\n",
     "        archi.append((chiavi[(riga0,riga1)],(chiavi[(riga2,riga3)])))\n",
     "        \n",
-    "        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<pyplasm.xgepy.Hpc; proxy of <Swig Object of type 'std::shared_ptr< Hpc > *' at 0x000000000EC1D9F0> >"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "VIEW(STRUCT(MKPOLS([nodi,archi])))\n"
+    "        VIEW(STRUCT(MKPOLS([nodi,archi])))\n"
    ]
   },
   {
