--- a/2017-11-20/workshop_05.ipynb
+++ b/2017-11-20/workshop_05.ipynb
@@ -100,7 +100,7 @@
      "output_type": "stream",
      "text": [
       "Evaluating fenvs.py..\n",
-      "...fenvs.py imported in 0.20908376148 seconds\n"
+      "...fenvs.py imported in 0.00627743141143 seconds\n"
      ]
     }
    ],
@@ -138,7 +138,26 @@
     "            nodi.append((riga2,riga3))\n",
     "            i = i+1\n",
     "        archi.append((chiavi[(riga0,riga1)],(chiavi[(riga2,riga3)])))\n",
-    "        \n",
+    "        \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pyplasm.xgepy.Hpc; proxy of <Swig Object of type 'std::shared_ptr< Hpc > *' at 0x000000000F4C3120> >"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "        VIEW(STRUCT(MKPOLS([nodi,archi])))\n"
    ]
   },
