--- a/2017-11-3/workshop_03.ipynb
+++ b/2017-11-3/workshop_03.ipynb
@@ -31,7 +31,7 @@
      "output_type": "stream",
      "text": [
       "Evaluating fenvs.py..\n",
-      "...fenvs.py imported in 0.0056990532218 seconds\n"
+      "...fenvs.py imported in 0.00579149717721 seconds\n"
      ]
     }
    ],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -76,8 +76,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "cilindro = CYLINDER([1,2.9])(30) # cilindro definito per realizare le 4 entrate della chiesa\n",
@@ -106,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -125,8 +127,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Unisco tra di loro il corpo della chiesa con la cupola principale\n",
@@ -139,8 +143,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Creo un quarto della chiesa finale\n",
@@ -155,8 +161,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# La chiesa finale è data dal quarto di chiesa ripetuto 4 volta, essendo essa perfettamente simmetrica\n",
@@ -165,16 +173,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pyplasm.xgepy.Hpc; proxy of <Swig Object of type 'std::shared_ptr< Hpc > *' at 0x000000000ED824E0> >"
+       "<pyplasm.xgepy.Hpc; proxy of <Swig Object of type 'std::shared_ptr< Hpc > *' at 0x000000000F6B2030> >"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
