--- a/2017-18-12/workshop_finale.ipynb
+++ b/2017-18-12/workshop_finale.ipynb
@@ -39,7 +39,9 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from pyplasm import*\n",
