--- a/2017-18-12/workshop_finale.ipynb
+++ b/2017-18-12/workshop_finale.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![davanti](davanti.JPG) ![latoDestro](latoDestro.JPG)"
+    "![davanti](davanti.JPG)"
    ]
   },
   {
