--- a/2017-11-3/workshop_03.ipynb
+++ b/2017-11-3/workshop_03.ipynb
@@ -18,6 +18,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "L'approccio è il seguente: si realizza un quarto di chiesa e poi si replicano le parti restanti per comporre la chiesa finale essendo essa perfettamente simmetrica"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "![church1](church1.JPG) ![church2](church2.JPG)"
    ]
   },
